<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ko.sleepyapp.MainActivity"
    android:weightSum="1"
    android:background="@color/blueDark">


    <TextView
        style="@style/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/AppTitle"
        android:id="@+id/AppTitle"/>

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/MusicPreferences"
        android:id="@+id/musicpreference"/>

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/MusicSource"
        android:id="@+id/musicsource"/>

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/DeviceConnection"
        android:id="@+id/deviceconnection"/>

    <TextView
        style="@style/textNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Preferences"
        android:id="@+id/preferences"/>

    <TextView
        style="@style/textNormal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="@string/Back"
        android:id="@+id/back"/>

</LinearLayout>
